@@ -97,14 +97,12 @@ Notes and known limitations
   (possibly incompatible) increments as it provides more power to configure 
   and customize the test process. 
 
-* ``tox`` uses virtualenv_ and virtualenv3_, the latter being a fork
-  which roughly works with Python3 but has less features (no "pip" and
-  other problems).  solution: virtualenv_ needs to merge and grow proper 
-  native Python3 support, preferably in a "single-source" way. 
-
-* tox does not work on the Windows/Python3/Virtualenv3 combination
-  because there is no setuptools_ for Python3 and virtualenv3_ does 
-  not support using distribute_. 
+* ``tox`` uses virtualenv_ and virtualenv5_, the latter being a fork
+  of virtualenv3_ which roughly works with Python3 but has less features 
+  (no "pip" and other problems).  This comes with limitations and you 
+  may run into them when trying to create python3 based virtual environments. 
+  IMO the proper solution is: virtualenv_ needs to merge 
+  and grow proper native Python3 support, preferably in a "single-source" way. 
 
 * ``tox`` currently uses a ``setup.py sdist`` invocation to create 
   an installable package and then invokes ``pip`` or ``easy_install`` to 
